# fastapi-users-auth

./: .gitignore  LICENSE  README.md  __init__.py  model_factory.py  pyproject.toml  test_module.py
config/: __init__.py  auth_config.py
dependencies/: __init__.py  auth_deps.py  auth_provider.py  multi_provider_auth_deps.py  web_auth_deps.py
examples/: complete_integration.py  integration_example.py  secure_upload_integration.py
models/: __init__.py  auth_models.py  group_models.py  user_models.py  users.py
routers/: __init__.py  auth_router.py  multi_provider_auth_router.py  settings_router.py  user_router.py
services/: __init__.py  auth_service.py  auth_service_manager.py  base_auth_service.py  base_user_service.py  oauth_auth_service.py  service_factory.py  user_service.py
templates/: settings.html
tests/: test_group_models.py  test_model_factory.py  test_security_long_password.py  test_settings_router.py
utils/: __init__.py  security.py  token_utils.py
