# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-users-auth"
version = "0.0.2"
description = "A FastAPI library for user authentication and management"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Fabian Aichele", email = "aichele@zykl.io" }]
keywords = ["fastapi", "library", "domain"]
dependencies = [
    "pydantic>=2.7,<3",
    "sqlalchemy>=2,<3",
    "fastapi-logging-manager"
]
optional-dependencies = { dev = ["pytest", "pytest-cov", "mypy", "ruff", "build", "twine"] }
[project.urls]
Homepage = "https://github.com/faichele/fastapi_users_auth"
Repository = "https://github.com/faichele/fastapi_users_auth.git"

[tool.setuptools]
packages = [
    "fastapi_users_auth",
    "fastapi_users_auth.config",
    "fastapi_users_auth.dependencies",
    "fastapi_users_auth.models",
    "fastapi_users_auth.routers",
    "fastapi_users_auth.services",
    "fastapi_users_auth.utils"
]
package-dir = {"fastapi_users_auth" = "."}

[tool.setuptools.package-data]
fastapi_users_auth = ["templates/*.html"]
